Fix img spacing

--- a/css/progressive-image.css
+++ b/css/progressive-image.css
@@ -45,10 +45,10 @@ a.progressive:hover {
 
 @media screen and (max-width: 799px) {
   .progressive img.preview.w {
-    width: 103% !important; /* Magnify img to cover the RIGHT to create full bleed look */
+    width: 101vw !important; /* Magnify img to cover the RIGHT to create full bleed look */
     height: auto; /* Clear $entry-h inheritable from deskop */
     max-height: none;
-    max-width: 103%; /* Magnify img to cover the RIGHT to create full bleed look */
+    max-width: 100%; /* OBSOLETE NO 103% Magnify img to cover the RIGHT to create full bleed look */
     margin-left: -1.5%; /* Remove the LEFT table wrapper inner borderto create full bleed look */
   }
 }
@@ -62,7 +62,7 @@ a.progressive:hover {
 
 @media screen and (max-width: 799px) {
   .progressive img.preview.h {
-    width: 103% !important; /* Magnify img to cover the RIGHT to create full bleed look */
+    width: 101vw !important; /* Magnify img to cover the RIGHT to create full bleed look */
     height: auto; /* Clear $entry-h inheritable from deskop */
     max-height: none;
   }
@@ -77,7 +77,7 @@ a.progressive:hover {
 
 @media screen and (max-width: 799px) {
   .photo.entry .progressive img.preview.h {
-    width: 103vw !important; /* Magnify img to cover the RIGHT to create full bleed look */
+    width: 101vw !important; /* Magnify img to cover the RIGHT to create full bleed look */
     height: auto; /* Clear $entry-h inheritable from deskop */
     max-height: none;
   }
